--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+  overflow-x: hidden;
+  min-height: 100dvh;
+}
+
+
+
 .App {
   text-align: center;
 }
@@ -28,10 +35,30 @@
   color: #61dafb;
 }
 
+a {
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.4s ease;
+}
+
+li:hover,
+.user-menu:hover {
+  color: rgb(19, 110, 228);
+}
+
+li:hover a {
+  color: rgb(19, 110, 228);
+}
+
+.home-text {
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
